--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ font-display:auto;font-style:italic;font-weight:700;font-stretch:normal;
    
 }
 
+
 .orange-flex{
     display:flex;
     flex-direction: row;
@@ -206,27 +207,27 @@ font-display:auto;font-style:italic;font-weight:700;font-stretch:normal;
 
 
 .title {
-    margin-top:20vh;
+    margin-top:20vh !important;
     font-size:60px;
     font-family:"halyard-text";
   
     width:90%;
     margin: 0 auto;
     text-align: center ;
+    
    
   
   
 
 }
-.ga {
-    font-family:"halyard-text"; 
-}
 
+/*Normal */
 .somos { 
     font-family:"nimbus-roman" !important;
     font-style: normal;
     font-weight: normal;
 }
+
 
 
 .italic {
@@ -243,7 +244,7 @@ font-display:auto;font-style:italic;font-weight:700;font-stretch:normal;
      /*This is the logo font */
     font-family: "halyard-text",sans-serif;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 400;
     
   
 }
@@ -251,7 +252,7 @@ font-display:auto;font-style:italic;font-weight:700;font-stretch:normal;
 .tarjeta {
     margin-top:20vh;
     width: 40%;
-    height:400px;
+    height:50vh;
 
     box-shadow: 0px 10px 30px gray;
     transform: rotate(8deg);
@@ -300,6 +301,7 @@ font-size: 1.5rem;
     margin-bottom:80px;
     font-family:"halyard-text";
    
+   
 }
 
 .explain-title {
@@ -307,11 +309,14 @@ font-size: 1.5rem;
     margin-bottom:50px;
     font-family: 'ft88regular';
     font-size: 2rem;
+    font-family:"halyard-text";
+    font-family: normal;
 }
 
 .texto > span {
     margin-right:15px;
     font-size: 3rem;
+    font-family: 'ft88regular';
 }
 
 form {
@@ -405,6 +410,7 @@ footer {
     flex: row;
     margin-top:50px;
    
+   
   
     
 }
@@ -455,6 +461,10 @@ footer h1 {
     font-size: 20px;
    
    
+}
+
+.ga {
+    font-family:"halyard-text"; 
 }
 
 
@@ -513,9 +523,10 @@ footer h1 {
    
    
     .title {
-        margin-top:10vh;
+        margin-top:40px !important;
         font-size:32px;
         font-family:"halyard-text";
+        margin-bottom:0px;
        
        
       
@@ -530,13 +541,15 @@ footer h1 {
         transform: rotate(8deg); }
     }*/
     .tarjeta {
-        margin-top:20vh;
         width: 80%;
         height:220px;
-
         box-shadow: 0px 10px 5px gray;
-        transform: rotate(7deg); }
-
+        transform: rotate(7deg); 
+        position:relative;
+        top:-130px;
+    }
+       
+ 
 
     .task-flex {
         display:flex;
@@ -653,7 +666,8 @@ footer h1 {
     }
     
     .bold {
-        font-weight: bold;
+        font-family:"halyard-text";
+        font-weight: 600;
     }
     
     
@@ -662,21 +676,25 @@ footer h1 {
         display:flex;
         flex-direction: row;
         text-align: left;
-        margin-bottom:80px;
+        margin-bottom:30px;
         font-family:"halyard-text";
+        font-size: 14px;
        
     }
     
     .explain-title {
-        margin-top:100px;
+        margin-top:0px;
         margin-bottom:50px;
-        font-family: 'ft88regular';
+        font-family:"halyard-text";
+        font-weight:400;
         font-size: 2rem;
+       
     }
     
     .texto > span {
         margin-right:15px;
         font-size: 3rem;
+        font-family: 'ft88regular';
     }
     
     form {
@@ -742,14 +760,23 @@ footer h1 {
      font-size: 20px;
      margin-bottom:200px;
     text-decoration: none;
-font-family:"halyard-text"; ;
+font-family:"halyard-text"; 
     
     
 
 }
 
 footer {
-    margin-top:50px;
+    margin-top:100px;
+   
+}
+
+.footer-logo, .emails {
+   margin-top:10px
+}
+
+.footer-logo img {
+    margin-left:10px;
 }
 
     
@@ -765,7 +792,7 @@ footer {
         margin-top:20vh;
         width: 60%;
         height:900px;
-        border:2px solid blue;
+        
         box-shadow: 0px 10px 30px gray;
         transform: rotate(8deg);
     }
