--- a/result.css
+++ b/result.css
@@ -105,22 +105,23 @@ font-display:auto;font-style:italic;font-weight:700;font-stretch:normal;
     width:100%;
     margin: 0 auto;
     text-align: center;
-  
-    
-    margin-bottom: 200px;
+    margin-bottom: 50px;
+   
    
 }
 
 .container h1 {
     margin-top:50px;
     font-family:"halyard-text";
-    font-weight: normal;
-    font-size: 4rem;
+    font-weight: 400;
+   
+   
+   
 }
 .container .names {
 margin:30px 0px;
 font-size: 2rem;
-font-style: italic;
+
 }
 
 
@@ -167,19 +168,20 @@ font-style: italic;
     border:1px solid rgb(202, 202, 202);
     box-shadow: 10px 10px 10px rgb(202, 202, 202);
     width:50%;
-    margin-bottom: 200px;
+    margin-bottom: 50px;
     min-height: 400px;
     text-align: justify;
     display:flex;
     flex-direction: column;
     justify-content: space-between;
+  
 
 }
 
 .card img {
 
     width:100%;
-  
+ 
 
   
 }
@@ -192,6 +194,7 @@ font-style: italic;
    position:relative;
    left:10px;
    overflow: hidden;
+  
 }
 
 /*DOWNLOAD ICON */
@@ -203,8 +206,10 @@ font-style: italic;
 
 .text-container {
     margin: 0 auto;
-  
     width: 80%;
+    
+    
+   
 }
 
 .textp {
@@ -214,6 +219,8 @@ font-style: italic;
     font-style: normal; 
     font-size: 2rem;
     font-family:"halyard-text";
+   
+   
     
 }
 
@@ -234,6 +241,7 @@ font-style: italic;
     width:30%;
     position:relative;
     bottom:160px;
+
 
 }
 .download img {
@@ -257,6 +265,7 @@ font-style: italic;
     width:90%;
     margin:0 auto;
     margin-top:50px;
+   
     
     
 
@@ -277,7 +286,6 @@ font-style: italic;
 .times {
     font-size: 2rem;
     font-weight: normal;
-    font-style: italic;
 }
 
 
@@ -289,7 +297,8 @@ font-style: italic;
 
 
 /* ======= FOOTER BELOW ===== */
-footer {
+
+/*footer {
     text-align: left;
     height:200px;
     width:100%;
@@ -297,11 +306,12 @@ footer {
     display: flex;
     flex: row;
     flex-direction: space-between;
+  
    
     /*position: fixed;
     left: 0;
     bottom: 0;
-    text-align: center;*/
+    text-align: center;
 }
 
 .footer-logo {
@@ -338,16 +348,88 @@ footer h1 {
     font-size: 20px;
    
    
+} */
+
+
+footer {
+    text-align: left;
+    height:200px;
+    width:100%;
+   background-color: #e53a00;
+    display: flex;
+    flex: row;
+    
+    
+   
+   
+  
+    
 }
 
+.footer-logo {
+    width: 50%;
+   
+    margin:0;
+    padding:0;
+
+  
+}
+
+.footer-logo img {
+   
+    padding:0;
+    margin:0;
+   
+}
+
+.emails {
+    width:50%;
+    text-align: right;
+    display:flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-end;
+    margin-right:10px;
+    color:white;
+  
+    text-align: right;
+    margin-bottom:37px;
+   
+}
+footer img {
+    margin-top: 20px;
+    text-align: left;
+    width:145px;
+    margin-left: 35px;
+   
+    
+}
+
+footer h1 {
+    margin-top: 40px;
+    margin-left: 50px;
+    font-family: 'ft88regular';
+    font-size: 20px;
+   
+   
+}
 
 @media (max-width:700px){
 
     .container h1 {
-      
+      margin-top:50px !important;
         width:90%;
         margin: 0 auto;
+        font-size: 1rem !important;
+        margin-bottom:0;
+    }
+
+    .names {
+    
+        position:relative;
+        top:-25px;
         font-size: 48px !important;
+
     }
 
     .orange-flex{
@@ -379,13 +461,27 @@ footer h1 {
       
        
     }
+
+    .text-container .textp {
+        font-size: 24px;
+      
+    }
+
+    .keywords h4 {
+        font-family:"halyard-text";
+    }
     
-    footer {
+
+    ul li {
+       font-size: 2rem !important;
+    }
+     
+    /*footer {
        
        
         /*position: fixed;
         left: 0;
-        bottom: 0;*/
+        bottom: 0;
         height:300px;
         width:100%;
         background-color: #FF6900;
@@ -427,13 +523,33 @@ margin-bottom:50px;
        text-align: center;
        align-items: center;
     }
+    */
+
+    footer {
+        margin-top:100px;
+       
+    }
+    
+    .footer-logo, .emails {
+       margin-top:10px
+    }
+    
+    .footer-logo img {
+        margin-left:10px;
+    }
+    
+        
+    
+        
+    
+    
 
     .card {
         margin: 0 auto;
         border:1px solid rgb(202, 202, 202);
         box-shadow: 10px 10px 10px rgb(202, 202, 202);
         width:90%;
-        margin-bottom: 200px;
+        margin-bottom: 50px;
         min-height: 400px;
         text-align: justify;
         display:flex;
